--- a/src/Component/Encryption/composer.json
+++ b/src/Component/Encryption/composer.json
@@ -44,7 +44,8 @@
         "web-token/jwt-encryption-algorithm-dir": "Direct Key Encryption Algorithms",
         "web-token/jwt-encryption-algorithm-ecdh-es": "ECDH-ES Based Key Encryption Algorithms",
         "web-token/jwt-encryption-algorithm-pbes2": "PBES2 Based Key Encryption Algorithms",
-        "web-token/jwt-encryption-algorithm-rsa": "RSA Based Key Encryption Algorithms"
+        "web-token/jwt-encryption-algorithm-rsa": "RSA Based Key Encryption Algorithms",
+        "web-token/jwt-encryption-algorithm-experimental": "Experimental Key and Signature Algorithms"
     },
     "extra": {
         "branch-alias": {
