--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
                 "src/SignatureAlgorithm/RSA",
                 "src/SignatureAlgorithm/Experimental"
             ],
+            "Jose\\Component\\Core\\Util\\Ecc\\": [
+                "src/Ecc"
+            ],
             "Jose\\Component\\Encryption\\Algorithm\\": [
                 "src/EncryptionAlgorithm/Experimental"
             ],
@@ -99,6 +102,7 @@
         "web-token/jwt-signature-algorithm-none": "self.version",
         "web-token/jwt-signature-algorithm-hmac": "self.version",
         "web-token/jwt-signature-algorithm-rsa": "self.version",
+        "web-token/jwt-util-ecc": "self.version",
         "web-token/jwt-signature-algorithm-experimental": "self.version",
         "web-token/jwt-encryption-algorithm-experimental": "self.version"
     },
