--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,10 +14,11 @@
         <testsuite name="Test Suite">
             <directory>./src/Bundle/*/Tests/</directory>
             <directory>./src/Component/*/Tests/</directory>
+            <directory>./src/Ecc/*/Tests/</directory>
+            <directory>./src/SignatureAlgorithm/*/Tests/</directory>
             <directory>./src/EncryptionAlgorithm/ContentEncryption/*/Tests/</directory>
             <directory>./src/EncryptionAlgorithm/KeyEncryption/*/Tests/</directory>
             <directory>./src/EncryptionAlgorithm/Experimental/Tests/</directory>
-            <directory>./src/SignatureAlgorithm/*/Tests/</directory>
         </testsuite>
     </testsuites>
     <php>
@@ -36,6 +37,10 @@
                 <directory>./tests</directory>
                 <directory>./src/Bundle/*/Tests/</directory>
                 <directory>./src/Component/*/Tests/</directory>
+                <directory>./src/Ecc/*/Tests/</directory>
+                <directory>./src/EncryptionAlgorithm/ContentEncryption/*/Tests/</directory>
+                <directory>./src/EncryptionAlgorithm/KeyEncryption/*/Tests/</directory>
+                <directory>./src/EncryptionAlgorithm/Experimental/Tests/</directory>
                 <directory suffix="Test.php">./src</directory>
             </exclude>
         </whitelist>
