--- a/src/Ecc/composer.json
+++ b/src/Ecc/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "web-token/jwt-key-mgmt",
-    "description": "Key Management component of the JWT Framework.",
+    "name": "web-token/jwt-util-ecc",
+    "description": "ECC Tools for the JWT Framework.",
     "type": "library",
     "license": "MIT",
     "keywords": ["JWS", "JWT", "JWE", "JWA", "JWK", "JWKSet", "Jot", "Jose", "RFC7515", "RFC7516", "RFC7517", "RFC7518", "RFC7519", "RFC7520", "Bundle", "Symfony"],
@@ -11,29 +11,19 @@
             "homepage": "https://github.com/Spomky"
         },{
             "name": "All contributors",
-            "homepage": "https://github.com/web-token/jwt-key-mgmt/contributors"
+            "homepage": "https://github.com/web-token/jwt-core/contributors"
         }
     ],
     "autoload": {
         "psr-4": {
-            "Jose\\Component\\KeyManagement\\":  ""
+            "Jose\\Component\\Encryption\\Algorithm\\ContentEncryption\\":  ""
         }
     },
     "require": {
-        "lib-openssl": "*",
-        "paragonie/sodium_compat": "^1.2",
-        "web-token/jwt-core": "^1.2",
-        "web-token/jwt-util-ecc": "^1.2"
+        "web-token/jwt-core": "^1.2"
     },
     "require-dev": {
-        "php-http/message-factory": "^1.0",
-        "php-http/httplug": "^1.1",
-        "php-http/mock-client": "^1.0",
         "phpunit/phpunit": "^6.0|^7.0"
-    },
-    "suggest": {
-        "php-http/message-factory": "To enable JKU/X5U support.",
-        "php-http/httplug": "To enable JKU/X5U support."
     },
     "extra": {
         "branch-alias": {
