--- a/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
@@ -20,7 +20,8 @@
         }
     },
     "require": {
-        "web-token/jwt-encryption": "^1.2"
+        "web-token/jwt-encryption": "^1.2",
+        "web-token/jwt-util-ecc": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0|^7.0"
