--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,11 @@ matrix:
         - php: 7.1
           env: deps=low
         - php: 7.1
-        - php: nightly
+          emv: SYMFONY_DEPRECATIONS_HELPER=weak
         - php: 7.2
+          emv: SYMFONY_DEPRECATIONS_HELPER=weak
+        - php: nightly
+          emv: SYMFONY_DEPRECATIONS_HELPER=weak
 
 before_script:
     - chmod +x ./tests/install_php_ext.sh
