Coding Standard and deps updated

--- a/composer.json
+++ b/composer.json
@@ -59,8 +59,8 @@
         "lib-openssl": "*",
         "fgrosse/phpasn1": "^2.0",
         "paragonie/sodium_compat": "^1.2",
-        "spomky-labs/aes-key-wrap": "^4.0.1",
-        "spomky-labs/base64url": "^1.0",
+        "spomky-labs/aes-key-wrap": "^4.0.1|^5.0",
+        "spomky-labs/base64url": "^1.0|^2.0",
         "symfony/config": "^3.4|^4.0",
         "symfony/console": "^3.4|^4.0",
         "symfony/dependency-injection": "^3.4|^4.0",
@@ -69,7 +69,7 @@
     },
     "require-dev": {
         "ext-curl": "*",
-        "bjeavons/zxcvbn-php": "^0.3.0",
+        "bjeavons/zxcvbn-php": "^0.4.0",
         "blackfire/php-sdk": "^1.14",
         "guzzlehttp/psr7": "^1.4",
         "matthiasnoback/symfony-config-test": "^3.1|^4.0",
