--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
         "php": "^7.1",
         "ext-gmp": "*",
         "ext-mbstring": "*",
+        "ext-json": "*",
         "lib-openssl": "*",
         "fgrosse/phpasn1": "^2.0",
         "paragonie/sodium_compat": "^1.2",
