--- a/src/Component/Core/composer.json
+++ b/src/Component/Core/composer.json
@@ -35,7 +35,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.2v.x-dev"
+            "dev-master": "1.2.x-dev"
         }
     },
     "config": {
