--- a/src/Bundle/JoseFramework/composer.json
+++ b/src/Bundle/JoseFramework/composer.json
@@ -29,6 +29,7 @@
     "require-dev": {
         "symfony/framework-bundle": "^4.1",
         "symfony/browser-kit": "^4.1",
+        "symfony/var-dumper": "^4.1",
         "phpunit/phpunit": "^7.0",
         "symfony/phpunit-bridge": "^4.1",
         "guzzlehttp/psr7": "^1.4",
