--- a/composer.json
+++ b/composer.json
@@ -81,8 +81,7 @@
         "phpunit/phpunit": "^7.0",
         "symfony/browser-kit": "^4.1",
         "symfony/finder": "^4.1",
-        "symfony/phpunit-bridge": "^4.1",
-        "symfony/var-dumper": "^4.1"
+        "symfony/phpunit-bridge": "^4.1"
     },
     "replace": {
         "web-token/jwt-core": "self.version",
