--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,7 @@
         "symfony/browser-kit": "^3.4|^4.0",
         "symfony/finder": "^3.4|^4.0",
         "symfony/phpunit-bridge": "^3.4|^4.0",
+        "symfony/serializer": "^3.3|^4.0",
         "symfony/yaml": "^3.4|^4.0"
     },
     "replace": {
@@ -110,7 +111,8 @@
        "bjeavons/zxcvbn-php": "Adds key quality check for oct keys.",
        "php-http/httplug": "To enable JKU/X5U support.",
        "php-http/httplug-bundle": "To enable JKU/X5U support.",
-       "php-http/message-factory": "To enable JKU/X5U support."
+       "php-http/message-factory": "To enable JKU/X5U support.",
+       "symfony/serializer": "Use the Symfony serializer to serialize/unserialize JWS and JWE tokens."
    },
     "extra": {
         "branch-alias": {
