Ignore deprecation notices caused by vendor libraries
Ignores deprecation notices caused by vendor libraries whilst still failing tests for deprecation notices caused by code outside the vendors directory. This only affects the exit code and will still report all notices.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -27,6 +27,7 @@
         <ini name="intl.error_level" value="0" />
         <ini name="memory_limit" value="-1" />
         <server name="KERNEL_CLASS" value="Jose\Bundle\JoseFramework\Tests\AppKernel" />
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak_vendors" />
     </php>
     <filter>
         <whitelist>
