--- a/.gitsplit.yml
+++ b/.gitsplit.yml
@@ -11,6 +11,8 @@ splits:
       target: "https://${GH_TOKEN}@github.com/web-token/jwt-key-mgmt.git"
     - prefix: "src/Component/Console"
       target: "https://${GH_TOKEN}@github.com/web-token/jwt-console.git"
+    - prefix: "src/Component/NestedToken"
+      target: "https://${GH_TOKEN}@github.com/web-token/jwt-nested-token.git"
     - prefix: "src/Bundle/JoseFramework"
       target: "https://${GH_TOKEN}@github.com/web-token/jwt-bundle.git"
     - prefix: "src/EncryptionAlgorithm/ContentEncryption/AESCBC"
