--- a/composer.json
+++ b/composer.json
@@ -81,7 +81,8 @@
         "phpunit/phpunit": "^7.0",
         "symfony/browser-kit": "^4.1",
         "symfony/finder": "^4.1",
-        "symfony/phpunit-bridge": "^4.1"
+        "symfony/phpunit-bridge": "^4.1",
+        "symfony/serializer": "^4.1"
     },
     "replace": {
         "web-token/jwt-core": "self.version",
@@ -113,7 +114,8 @@
        "bjeavons/zxcvbn-php": "Adds key quality check for oct keys.",
        "php-http/httplug": "To enable JKU/X5U support.",
        "php-http/httplug-bundle": "To enable JKU/X5U support.",
-       "php-http/message-factory": "To enable JKU/X5U support."
+       "php-http/message-factory": "To enable JKU/X5U support.",
+       "symfony/serializer": "Use the Symfony serializer to serialize/unserialize JWS and JWE tokens."
    },
     "extra": {
         "branch-alias": {
