--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -47,6 +47,7 @@
         </whitelist>
     </filter>
     <listeners>
+        <listener class="Symfony\Bridge\PhpUnit\CoverageListener" />
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
 </phpunit>
