--- a/composer.json
+++ b/composer.json
@@ -73,10 +73,15 @@
         "bjeavons/zxcvbn-php": "^0.4.0",
         "blackfire/php-sdk": "^1.14",
         "guzzlehttp/psr7": "^1.4",
+        "infection/infection": "^0.12.0",
         "matthiasnoback/symfony-config-test": "^3.1|^4.0",
         "php-coveralls/php-coveralls": "^2.0",
         "php-http/httplug-bundle": "^1.7",
         "php-http/mock-client": "^1.0",
+        "phpstan/phpstan": "^0.11",
+        "phpstan/phpstan-deprecation-rules": "^0.11",
+        "phpstan/phpstan-phpunit": "^0.11",
+        "phpstan/phpstan-strict-rules": "^0.11",
         "phpunit/phpunit": "^7.0",
         "symfony/browser-kit": "^4.1",
         "symfony/finder": "^4.1",
