--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ jobs:
               - ./vendor/bin/phpstan analyse
 
         - stage: Security Check
-          env: SCURITY_CHECK
+          env: SECURITY_CHECK
           before_script:
               - wget -c https://get.sensiolabs.org/security-checker.phar
               - chmod +x security-checker.phar
