--- a/composer.json
+++ b/composer.json
@@ -61,12 +61,12 @@
         "paragonie/sodium_compat": "^1.2",
         "spomky-labs/aes-key-wrap": "^4.0.1|^5.0",
         "spomky-labs/base64url": "^1.0|^2.0",
-        "symfony/config": "^4.1",
-        "symfony/console": "^4.1",
-        "symfony/dependency-injection": "^4.1",
-        "symfony/event-dispatcher": "^4.1",
-        "symfony/framework-bundle": "^4.1",
-        "symfony/http-kernel": "^4.1"
+        "symfony/config": "^4.2",
+        "symfony/console": "^4.2",
+        "symfony/dependency-injection": "^4.2",
+        "symfony/event-dispatcher": "^4.2",
+        "symfony/framework-bundle": "^4.2",
+        "symfony/http-kernel": "^4.2"
     },
     "require-dev": {
         "ext-curl": "*",
@@ -84,10 +84,10 @@
         "phpstan/phpstan-phpunit": "^0.11",
         "phpstan/phpstan-strict-rules": "^0.11",
         "phpunit/phpunit": "^7.0",
-        "symfony/browser-kit": "^4.1",
-        "symfony/finder": "^4.1",
-        "symfony/phpunit-bridge": "^4.1",
-        "symfony/serializer": "^4.1",
+        "symfony/browser-kit": "^4.2",
+        "symfony/finder": "^4.2",
+        "symfony/phpunit-bridge": "^4.2",
+        "symfony/serializer": "^4.2",
         "symfony/var-dumper": "^4.2"
     },
     "replace": {
@@ -121,8 +121,8 @@
        "php-http/httplug": "To enable JKU/X5U support.",
        "php-http/httplug-bundle": "To enable JKU/X5U support.",
        "php-http/message-factory": "To enable JKU/X5U support.",
-       "symfony/serializer": "Use the Symfony serializer to serialize/unserialize JWS and JWE tokens.",
-       "symfony/var-dumper": "Used to show data on the debug toolbar."
+       "symfony/serializer": "Use the Symfony serializer to serialize/unserialize JWS and JWE tokens2",
+       "symfony/var-dumper": "Used to show data on the debug toolba2."
    },
     "extra": {
         "branch-alias": {
