--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         }
     },
     "require": {
-        "php": "^7.1|^8.0",
+        "php": "^7.2",
         "ext-gmp": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
