--- a/src/Component/Core/composer.json
+++ b/src/Component/Core/composer.json
@@ -20,13 +20,14 @@
         }
     },
     "require": {
-        "php": "^7.2|^8.0",
+        "php": "^7.2",
         "ext-gmp": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "beberlei/assert": "^3.2",
         "fgrosse/phpasn1": "^2.0",
-        "spomky-labs/base64url": "^1.0|^2.0"
+        "spomky-labs/base64url": "^1.0|^2.0",
+        "thecodingmachine/safe": "^0.1.14"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
