--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,7 @@
         "ext-curl": "*",
         "bjeavons/zxcvbn-php": "^0.4.0",
         "blackfire/php-sdk": "^1.14",
-        "guzzlehttp/psr7": "^1.4",
+        "nyholm/psr7": "^1.0",
         "infection/infection": "^0.12.0",
         "matthiasnoback/symfony-config-test": "^3.1|^4.0",
         "php-coveralls/php-coveralls": "^2.0",
@@ -81,7 +81,7 @@
         "phpstan/phpstan-deprecation-rules": "^0.11",
         "phpstan/phpstan-phpunit": "^0.11",
         "phpstan/phpstan-strict-rules": "^0.11",
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^8.0",
         "symfony/browser-kit": "^4.2",
         "symfony/finder": "^4.2",
         "symfony/phpunit-bridge": "^4.2",
