Deprecations fixed and MacAlgorithm added

--- a/composer.json
+++ b/composer.json
@@ -58,12 +58,12 @@
         "ext-openssl": "*",
         "ext-sodium": "*",
         "fgrosse/phpasn1": "^2.0",
-        "spomky-labs/aes-key-wrap": "^4.0.1|^5.0",
-        "spomky-labs/base64url": "^1.0|^2.0",
+        "psr/event-dispatcher": "^1.0",
+        "spomky-labs/aes-key-wrap": "^5.0",
+        "spomky-labs/base64url": "^2.0",
         "symfony/config": "^4.2",
         "symfony/console": "^4.2",
         "symfony/dependency-injection": "^4.2",
-        "symfony/event-dispatcher": "^4.2",
         "symfony/framework-bundle": "^4.2",
         "symfony/http-kernel": "^4.2"
     },
@@ -72,7 +72,7 @@
         "bjeavons/zxcvbn-php": "^0.4.0",
         "blackfire/php-sdk": "^1.14",
         "nyholm/psr7": "^1.0",
-        "infection/infection": "^0.12.0",
+        "infection/infection": "^0.13",
         "matthiasnoback/symfony-config-test": "^3.1|^4.0",
         "php-coveralls/php-coveralls": "^2.0",
         "php-http/httplug-bundle": "^1.7",
@@ -83,6 +83,7 @@
         "phpstan/phpstan-strict-rules": "^0.11",
         "phpunit/phpunit": "^8.0",
         "symfony/browser-kit": "^4.2",
+        "symfony/event-dispatcher": "^4.2",
         "symfony/finder": "^4.2",
         "symfony/phpunit-bridge": "^4.2",
         "symfony/serializer": "^4.2",
