--- a/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
@@ -20,11 +20,11 @@
         }
     },
     "require": {
-        "web-token/jwt-encryption": "^2.0",
-        "web-token/jwt-util-ecc": "^2.0"
+        "spomky-labs/aes-key-wrap": "^5.0",
+        "web-token/jwt-encryption": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^8.0"
     },
     "extra": {
         "branch-alias": {
