--- a/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
@@ -21,7 +21,8 @@
     },
     "require": {
         "spomky-labs/aes-key-wrap": "^5.0",
-        "web-token/jwt-encryption": "^2.0"
+        "web-token/jwt-encryption": "^2.0",
+        "web-token/jwt-util-ecc": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0"
