--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,7 @@
     },
     "require-dev": {
         "ext-curl": "*",
+        "ext-gmp": "*",
         "bjeavons/zxcvbn-php": "^0.4.0",
         "blackfire/php-sdk": "^1.14",
         "nyholm/psr7": "^1.0",
