--- a/src/Component/Encryption/composer.json
+++ b/src/Component/Encryption/composer.json
@@ -21,6 +21,7 @@
     },
     "require": {
         "lib-openssl": "*",
+        "ext-gmp": "*",
         "web-token/jwt-core": "^2.0"
     },
     "require-dev": {
