New Easy Toolset
New builder to ease the use of this project.
Offers a simple and fluent way to create, load, verify and decrypt tokens

Example:

```php
$jws = Build::jws()
    ->exp(time() + 3600)
    ->iat(time())
    ->nbf(time())
    ->jti('0123456789', true)
    ->alg('RS512')
    ->sign($this->rsaKey())
```

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,6 +19,7 @@
             <directory>./src/EncryptionAlgorithm/ContentEncryption/*/Tests/</directory>
             <directory>./src/EncryptionAlgorithm/KeyEncryption/*/Tests/</directory>
             <directory>./src/EncryptionAlgorithm/Experimental/Tests/</directory>
+            <directory>./src/Easy/Tests/</directory>
         </testsuite>
     </testsuites>
     <php>
