--- a/src/Component/Encryption/composer.json
+++ b/src/Component/Encryption/composer.json
@@ -39,6 +39,7 @@
     },
     "extra": {
         "branch-alias": {
+            "dev-master": "2.1.x-dev",
             "v1.0": "1.0.x-dev",
             "v1.1": "1.1.x-dev",
             "v1.2": "1.2.x-dev",
