--- a/src/Easy/composer.json
+++ b/src/Easy/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "web-token/jwt-encryption-algorithm-rsa",
-    "description": "RSA Based Key Encryption Algorithms the JWT Framework.",
+    "name": "web-token/jwt-easy",
+    "description": "Easy toolset to use the JWT Framework.",
     "type": "library",
     "license": "MIT",
     "keywords": ["JWS", "JWT", "JWE", "JWA", "JWK", "JWKSet", "Jot", "Jose", "RFC7515", "RFC7516", "RFC7517", "RFC7518", "RFC7519", "RFC7520", "Bundle", "Symfony"],
@@ -16,12 +16,13 @@
     ],
     "autoload": {
         "psr-4": {
-            "Jose\\Component\\Encryption\\Algorithm\\KeyEncryption\\":  ""
+            "Jose\\Easy\\":  ""
         }
     },
     "require": {
-        "ext-gmp": "*",
-        "web-token/jwt-encryption": "^2.0"
+        "web-token/encryption-pack": "^2.1",
+        "web-token/signature-pack": "^2.1",
+        "web-token/jwt-checker": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0"
