--- a/src/SignatureAlgorithm/EdDSA/composer.json
+++ b/src/SignatureAlgorithm/EdDSA/composer.json
@@ -20,6 +20,7 @@
         }
     },
     "require": {
+        "ext-sodium": "*",
         "web-token/jwt-signature": "^2.0"
     },
     "require-dev": {
