--- a/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
@@ -19,10 +19,13 @@
             "Jose\\Component\\Encryption\\Algorithm\\KeyEncryption\\":  ""
         }
     },
+    "suggest": {
+        "ext-sodium": "Sodium is required for OKP key creation, EdDSA signature algorithm and ECDH-ES key encryption with OKP keys"
+    },
     "require": {
         "spomky-labs/aes-key-wrap": "^5.0",
-        "web-token/jwt-encryption": "^2.0",
-        "web-token/jwt-util-ecc": "^2.0"
+        "web-token/jwt-encryption": "^2.1",
+        "web-token/jwt-util-ecc": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0"
