--- a/src/Bundle/JoseFramework/composer.json
+++ b/src/Bundle/JoseFramework/composer.json
@@ -48,12 +48,12 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.1.x-dev",
             "v1.0": "1.0.x-dev",
             "v1.1": "1.1.x-dev",
             "v1.2": "1.2.x-dev",
             "v1.3": "1.3.x-dev",
-            "v2.0": "2.0.x-dev"
+            "v2.0": "2.0.x-dev",
+            "v2.1": "2.1.x-dev"
         }
     },
     "config": {
