--- a/composer.json
+++ b/composer.json
@@ -136,7 +136,7 @@
             "v1.2": "1.2.x-dev",
             "v1.3": "1.3.x-dev",
             "v2.0": "2.0.x-dev",
-            "v2.1": "dev-master"
+            "v2.1": "2.1.x-dev"
         }
     },
     "conflict": {
