--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,6 @@
     },
     "require": {
         "php": "^7.2",
-        "ext-gmp": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
@@ -71,6 +70,7 @@
     "require-dev": {
         "ext-curl": "*",
         "ext-gmp": "*",
+        "ext-sodium": "*",
         "bjeavons/zxcvbn-php": "^0.4.0",
         "blackfire/php-sdk": "^1.14",
         "nyholm/psr7": "^1.0",
