--- a/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
@@ -23,6 +23,7 @@
         "ext-sodium": "Sodium is required for OKP key creation, EdDSA signature algorithm and ECDH-ES key encryption with OKP keys"
     },
     "require": {
+        "lib-openssl": "*",
         "spomky-labs/aes-key-wrap": "^5.0",
         "web-token/jwt-encryption": "^2.1",
         "web-token/jwt-util-ecc": "^2.1"
