--- a/composer.json
+++ b/composer.json
@@ -122,7 +122,9 @@
    "suggest":{
        "ext-sodium": "Sodium is required for OKP key creation, EdDSA signature algorithm and ECDH-ES key encryption with OKP keys",
        "bjeavons/zxcvbn-php": "Adds key quality check for oct keys.",
-       "symfony/http-client": "To enable JKU/X5U support.",
+       "php-http/httplug": "To enable JKU/X5U support.",
+       "php-http/httplug-bundle": "To enable JKU/X5U support.",
+       "php-http/message-factory": "To enable JKU/X5U support.",
        "symfony/serializer": "Use the Symfony serializer to serialize/unserialize JWS and JWE tokens.",
        "symfony/var-dumper": "Used to show data on the debug toolbar."
    },
