--- a/composer.json
+++ b/composer.json
@@ -83,6 +83,7 @@
         "phpstan/phpstan-deprecation-rules": "^0.11",
         "phpstan/phpstan-phpunit": "^0.11",
         "phpstan/phpstan-strict-rules": "^0.11",
+        "phpunit/phpunit": "^8.0",
         "symfony/browser-kit": "^4.2|^5.0",
         "symfony/event-dispatcher": "^4.2|^5.0",
         "symfony/finder": "^4.2|^5.0",
