--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,8 @@
         "symfony/console": "^4.2|^5.0",
         "symfony/dependency-injection": "^4.2|^5.0",
         "symfony/framework-bundle": "^4.2|^5.0",
-        "symfony/http-kernel": "^4.2|^5.0"
+        "symfony/http-kernel": "^4.2|^5.0",
+        "symfony/polyfill-mbstring": "^1.12"
     },
     "require-dev": {
         "ext-curl": "*",
