--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         }
     },
     "require": {
-        "php": ">=7.2",,
+        "php": ">=7.2",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
