--- a/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
@@ -24,7 +24,7 @@
     },
     "require": {
         "lib-openssl": "*",
-        "spomky-labs/aes-key-wrap": "^5.0",
+        "spomky-labs/aes-key-wrap": "^5.0|^6.0",
         "web-token/jwt-encryption": "^2.1",
         "web-token/jwt-util-ecc": "^2.1"
     },
